# Shaders-For-Scientific-Visualisation

./: .coveragerc  .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  babel.config.js  codecov.yml  install.json  jest.config.js  mypy.ini  package.json  pySSV.json  pyproject.toml  pytest.ini  readthedocs.yml  setup.py  webpack.config.js
.github/workflows/: build.yml  check-release.yml  prep-release.yml  publish-release.yml
css/: index.js  widget.css
docs/: Makefile  environment.yml  make.bat
docs/source/: built-in-shader-templates.rst  conf.py  develop-install.rst  glsl_support.h  index.rst  installing.rst  introduction.rst  reference.rst  shader-library.rst  writing-shader-templates.rst
docs/source/_static/: helper.js
docs/source/examples/: additional_examples.nblink  gui_examples.nblink
examples/: additional_examples.ipynb  gui_examples.ipynb  introduction.ipynb
pySSV/: __init__.py  _frontend.py  _version.py  environment.py  example.py  ssv_callback_dispatcher.py  ssv_camera.py  ssv_canvas.py  ssv_canvas_stream_server.py  ssv_colour.py  ssv_fonts.py  ssv_future.py  ssv_gui.py  ssv_logging.py  ssv_pragma_parser.py  ssv_preprocessor.py  ssv_render.py  ssv_render_buffer.py  ssv_render_opengl.py  ssv_render_process_client.py  ssv_render_process_server.py  ssv_render_widget.py  ssv_shader_args_tokenizer.py  ssv_shader_preprocessor.py  ssv_shader_source_preprocessor.py  ssv_texture.py  ssv_vertex_buffer.py
pySSV/fonts/: NotoSans-SemiBold.fnt  __init__.py
pySSV/nbextension/: extension.js
pySSV/shaders/: color_utils.glsl  compat.glsl  global_uniforms.glsl  random.glsl  sdf_ops.glsl  template_full_screen_colour.glsl  template_geometry.glsl  template_pixel.glsl  template_point_cloud.glsl  template_render_test.glsl  template_sdf.glsl  template_shadertoy.glsl  template_ui.glsl  template_vert.glsl  template_vert_pixel.glsl  text.glsl
pySSV/tests/: __init__.py  conftest.py  test_example.py  test_nbextension_path.py  test_ssv_pragma_parser.py  test_ssv_preprocessor.py
src/: extension.ts  index.ts  plugin.ts  renderdoc_logo.ts  version.ts  widget.ts  widget_save_image_settings.ts  widget_status_bar.ts
src/__tests__/: index.spec.ts  utils.ts
