[build-system]
requires = [
    "hatchling>=1.3.1",
    "jupyterlab==3.*",
]
build-backend = "hatchling.build"

[project]
name = "pySSV"
description = "Leverage the power of shaders for scientific visualisation in Jupyter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "Thomas Mathieson", email = "thomas@mathieson.dev" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
    "GLSL",
    "Shaders",
    "OpenGL"
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "ipywidgets>=7.0.0",
]
version = "0.1.0.dev0"

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/space928/Shaders-For-Scientific-Visualisation"

[tool.hatch.build]
artifacts = [
    "pySSV/nbextension/index.*",
    "pySSV/labextension/*.tgz",
    "pySSV/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
"pySSV/nbextension" = "share/jupyter/nbextensions/pySSV"
"pySSV/labextension" = "share/jupyter/labextensions/pySSV"
"./install.json" = "share/jupyter/labextensions/pySSV/install.json"
"./pySSV.json" = "etc/jupyter/nbconfig/notebook.d/pySSV.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "pySSV/nbextension/index.js",
    "pySSV/labextension/package.json",
]
skip-if-exists = [
    "pySSV/nbextension/index.js",
    "pySSV/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.5.0",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:prod"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml", version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\"" },
    { src = "pySSV/_version.py" },
]

[tool.tbump.version]
current = "0.1.0.dev0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
