[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
build-backend = "hatchling.build"

[project]
name = "pySSV"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "ipywidgets>=8.0.0",
    "numpy>=1.22.0; python_version<='3.10'",
    "numpy>=1.24.0; python_version=='3.11'",
    "numpy>=1.26.0; python_version=='3.12'",
    "moderngl>=5.8.2",
    "Pillow>=10.1.0"
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
docs = [
    "jupyter_sphinx",
    "nbsphinx",
    "nbsphinx-link",
    "pypandoc",
    "pytest_check_links",
    "recommonmark",
    "sphinx>=1.5",
    "sphinx_rtd_theme",
]
examples = []
test = [
    "nbval",
    "pytest-cov",
    "pytest>=6.0",
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["pySSV/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"pySSV/labextension" = "share/jupyter/labextensions/py-ssv"
"install.json" = "share/jupyter/labextensions/py-ssv/install.json"

[tool.hatch.build.hooks.version]
path = "pySSV/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "pySSV/labextension/static/style.js",
    "pySSV/labextension/package.json",
]
skip-if-exists = ["pySSV/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "pySSV/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:prod"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
